# opendirectories-mcp

./: .gitignore  Dockerfile  README.md  llms-install.md  pyproject.toml  server.json  smithery.yaml
src/opendirectories_mcp/: __init__.py  __main__.py  server.py
